2008-07-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::addToLog): fixes in built-in
	installer; pretty printing of the external process output;
	properly enable "next" and "finish" buttons.

2008-07-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printProtocol):
	compiler for iptables distinguishes ICMPService and ICMP6Service

	* objects_init.xml.in: Added few standard ICMP6 objects

	* ObjectManipulator.cpp (ObjectManipulator::newICMP6): Added
	support for ICMP6Service object type in the GUI

	* ICMP6Service.cpp (ICMP6Service::ICMP6Service): Added class
	ICMP6Service

	* fwbuilder.dtd.in: Added XML element ICMP6Service

2008-06-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printProtocol): do not
	generate "-m icmp6 --icmp6-type any" for ipv6 for object "any
	icmp".

2008-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::loadDataFromDNS): object
	"discovery" by DNS zone transfer is not supported anymore.

2008-06-27  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printProtocol):
	should use "-p ipv6-icmp" for ipv6 rules.

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printProtocol): skip
	"-p all" for ipv6 to avoid warning "Warning: never matched
	protocol: all. use exension match instead"

2008-06-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printIP): using
	"-m frag --fragmore" for IPService objects that should match ip
	fragments.

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printDstService):
	compiler uses "--icmpv6-type" and "-m icmp6" options while
	generating ipv6 script.

2008-06-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTimeInterval):
	support for the "new" time module for iptables

2008-06-08  Vadim Kurland  <vadim@vk.crocodile.org>
